--- a/test-output/old/Android/methods.html
+++ b/test-output/old/Android/methods.html
@@ -1,12 +1,82 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Android</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9bbba7">  <td>20/09/07 11:47:15</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Android_MoreScreen.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_MoreScreen@34e9fd99]">&gt;&gt;AppLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@171493374</td>   <td></td> </tr>
-<tr bgcolor="9bbba7">  <td>20/09/07 11:49:18</td>   <td>123077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Android_MoreScreen.Login(java.lang.String)[pri:0, instance:com.zee5.ApplicasterScripts.Android_MoreScreen@34e9fd99]">Login</td> 
-  <td>main@171493374</td>   <td></td> </tr>
-<tr bgcolor="9bbba7">  <td>20/09/07 11:51:28</td>   <td>253663</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Android_MoreScreen.MyReminders(java.lang.String)[pri:3, instance:com.zee5.ApplicasterScripts.Android_MoreScreen@34e9fd99]">MyReminders</td> 
-  <td>main@171493374</td>   <td></td> </tr>
-<tr bgcolor="9bbba7">  <td>20/09/07 11:52:23</td>   <td>308044</td> <td>&nbsp;</td><td title="&lt;&lt;Android_MoreScreen.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_MoreScreen@34e9fd99]">&lt;&lt;tearDownApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@171493374</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>21/01/13 13:58:48</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Android_AppLaunch.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_AppLaunch@2accdbb5]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>21/01/13 13:58:54</td>   <td>6280</td> <td>&nbsp;</td><td title="&lt;&lt;Android_AppLaunch.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_AppLaunch@2accdbb5]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="8bb695">  <td>21/01/13 13:59:01</td>   <td>13358</td> <td>&nbsp;</td><td title="&gt;&gt;Android_Onboarding_Suite1.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Onboarding_Suite1@69997e9d]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="8bb695">  <td>21/01/13 14:02:25</td>   <td>217198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Android_Onboarding_Suite1.verificationOfLoginPage(java.lang.String)[pri:1, instance:com.zee5.ApplicasterScripts.Android_Onboarding_Suite1@69997e9d]">verificationOfLoginPage</td> 
+  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="8bb695">  <td>21/01/13 14:04:32</td>   <td>344327</td> <td>&nbsp;</td><td title="&lt;&lt;Android_Onboarding_Suite1.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Onboarding_Suite1@69997e9d]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>21/01/13 14:05:05</td>   <td>377627</td> <td>&nbsp;</td><td title="&gt;&gt;Android_Onboarding_Suite2.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Onboarding_Suite2@3059cbc]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>21/01/13 14:05:06</td>   <td>378137</td> <td>&nbsp;</td><td title="&lt;&lt;Android_Onboarding_Suite2.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Onboarding_Suite2@3059cbc]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="a8a6a0">  <td>21/01/13 14:05:13</td>   <td>384887</td> <td>&nbsp;</td><td title="&gt;&gt;Android_Onboarding_Suite3.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Onboarding_Suite3@1e683a3e]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="a8a6a0">  <td>21/01/13 14:05:13</td>   <td>385296</td> <td>&nbsp;</td><td title="&lt;&lt;Android_Onboarding_Suite3.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Onboarding_Suite3@1e683a3e]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="bc828d">  <td>21/01/13 14:05:20</td>   <td>391955</td> <td>&nbsp;</td><td title="&gt;&gt;Android_Subscription.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Subscription@6f46426d]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="bc828d">  <td>21/01/13 14:05:20</td>   <td>392365</td> <td>&nbsp;</td><td title="&lt;&lt;Android_Subscription.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Subscription@6f46426d]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="9bffaa">  <td>21/01/13 14:05:27</td>   <td>399097</td> <td>&nbsp;</td><td title="&gt;&gt;Android_Search.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Search@5403f35f]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="9bffaa">  <td>21/01/13 14:05:27</td>   <td>399629</td> <td>&nbsp;</td><td title="&lt;&lt;Android_Search.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Search@5403f35f]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="7ac8a8">  <td>21/01/13 14:05:34</td>   <td>406285</td> <td>&nbsp;</td><td title="&gt;&gt;Android_LandingScreen_BottomNavigation.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_BottomNavigation@6d4e5011]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="7ac8a8">  <td>21/01/13 14:05:34</td>   <td>406688</td> <td>&nbsp;</td><td title="&lt;&lt;Android_LandingScreen_BottomNavigation.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_BottomNavigation@6d4e5011]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="a49860">  <td>21/01/13 14:05:41</td>   <td>413346</td> <td>&nbsp;</td><td title="&gt;&gt;Android_Downloads.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Downloads@16a0ee18]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="a49860">  <td>21/01/13 14:05:41</td>   <td>413699</td> <td>&nbsp;</td><td title="&lt;&lt;Android_Downloads.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Downloads@16a0ee18]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="6b88f5">  <td>21/01/13 14:05:48</td>   <td>420516</td> <td>&nbsp;</td><td title="&gt;&gt;Android_LandingScreen_TopNavigation.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_TopNavigation@3bf9ce3e]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="6b88f5">  <td>21/01/13 14:05:49</td>   <td>421021</td> <td>&nbsp;</td><td title="&lt;&lt;Android_LandingScreen_TopNavigation.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_LandingScreen_TopNavigation@3bf9ce3e]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="ee6fee">  <td>21/01/13 14:05:56</td>   <td>427723</td> <td>&nbsp;</td><td title="&gt;&gt;Android_ListingScreen.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_ListingScreen@4d0f2471]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="ee6fee">  <td>21/01/13 14:05:56</td>   <td>428001</td> <td>&nbsp;</td><td title="&lt;&lt;Android_ListingScreen.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_ListingScreen@4d0f2471]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="a27078">  <td>21/01/13 14:06:02</td>   <td>434585</td> <td>&nbsp;</td><td title="&gt;&gt;Android_Settings.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Settings@7fee8714]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="a27078">  <td>21/01/13 14:06:03</td>   <td>434925</td> <td>&nbsp;</td><td title="&lt;&lt;Android_Settings.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Settings@7fee8714]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="aea0a9">  <td>21/01/13 14:06:09</td>   <td>441499</td> <td>&nbsp;</td><td title="&gt;&gt;Android_ExitPop.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_ExitPop@7205765b]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="aea0a9">  <td>21/01/13 14:06:10</td>   <td>441848</td> <td>&nbsp;</td><td title="&lt;&lt;Android_ExitPop.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_ExitPop@7205765b]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="a2cb77">  <td>21/01/13 14:06:16</td>   <td>448477</td> <td>&nbsp;</td><td title="&gt;&gt;DeepLinkValidation.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.DeepLinkValidation@48f278eb]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="a2cb77">  <td>21/01/13 14:06:17</td>   <td>448823</td> <td>&nbsp;</td><td title="&lt;&lt;DeepLinkValidation.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.DeepLinkValidation@48f278eb]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="aca7df">  <td>21/01/13 14:06:23</td>   <td>455514</td> <td>&nbsp;</td><td title="&gt;&gt;Android_MoreScreen.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_MoreScreen@4738a206]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="aca7df">  <td>21/01/13 14:06:24</td>   <td>455949</td> <td>&nbsp;</td><td title="&lt;&lt;Android_MoreScreen.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_MoreScreen@4738a206]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="9588e6">  <td>21/01/13 14:06:30</td>   <td>462544</td> <td>&nbsp;</td><td title="&gt;&gt;Android_BeforeTV.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_BeforeTV@f5acb9d]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="9588e6">  <td>21/01/13 14:06:31</td>   <td>462869</td> <td>&nbsp;</td><td title="&lt;&lt;Android_BeforeTV.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_BeforeTV@f5acb9d]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="7e966a">  <td>21/01/13 14:06:37</td>   <td>469457</td> <td>&nbsp;</td><td title="&gt;&gt;Android_ClubPack.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_ClubPack@5ba3f27a]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="7e966a">  <td>21/01/13 14:06:38</td>   <td>469756</td> <td>&nbsp;</td><td title="&lt;&lt;Android_ClubPack.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_ClubPack@5ba3f27a]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="ae7dc0">  <td>21/01/13 14:06:44</td>   <td>476369</td> <td>&nbsp;</td><td title="&gt;&gt;Android_UserSessionManagement.launchChromeApplication()[pri:0, instance:com.zee5.ApplicasterScripts.Android_UserSessionManagement@209da20d]">&gt;&gt;launchChromeApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="ae7dc0">  <td>21/01/13 14:06:45</td>   <td>476734</td> <td>&nbsp;</td><td title="&lt;&lt;Android_UserSessionManagement.ApptearDown()[pri:0, instance:com.zee5.ApplicasterScripts.Android_UserSessionManagement@209da20d]">&lt;&lt;ApptearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="8c98f8">  <td>21/01/13 14:06:51</td>   <td>483304</td> <td>&nbsp;</td><td title="&gt;&gt;Android_PlayerScreen.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_PlayerScreen@c88a337]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="8c98f8">  <td>21/01/13 14:06:51</td>   <td>483630</td> <td>&nbsp;</td><td title="&lt;&lt;Android_PlayerScreen.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_PlayerScreen@c88a337]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="717375">  <td>21/01/13 14:06:58</td>   <td>490145</td> <td>&nbsp;</td><td title="&gt;&gt;Android_Consumption_Screen.AppLaunch()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Consumption_Screen@57cf54e1]">&gt;&gt;AppLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943573036</td>   <td></td> </tr>
+<tr bgcolor="717375">  <td>21/01/13 14:06:58</td>   <td>490464</td> <td>&nbsp;</td><td title="&lt;&lt;Android_Consumption_Screen.tearDownApp()[pri:0, instance:com.zee5.ApplicasterScripts.Android_Consumption_Screen@57cf54e1]">&lt;&lt;tearDownApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
