--- a/test-output/old/Web/classes.html
+++ b/test-output/old/Web/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.zee5.PWASanityScripts.WebPWASanityScript</td>
+<td>com.zee5.MixpanelScripts.PWA_Web_Player</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>PWAWEBLogin</td>
+<td>checkPageName</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
