--- a/test-output/old/Web/methods-alphabetical.html
+++ b/test-output/old/Web/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Web</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e39af7">  <td>20/09/04 16:47:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebPWASanityScript.PWAWEBLogin(java.lang.String)[pri:1, instance:com.zee5.PWASanityScripts.WebPWASanityScript@7180e701]">PWAWEBLogin</td> 
-  <td>main@176097974</td>   <td></td> </tr>
-<tr bgcolor="e39af7">  <td>20/09/04 16:47:11</td>   <td>-9118</td> <td>&nbsp;</td><td title="&gt;&gt;WebPWASanityScript.init()[pri:0, instance:com.zee5.PWASanityScripts.WebPWASanityScript@7180e701]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@176097974</td>   <td></td> </tr>
-<tr bgcolor="e39af7">  <td>20/09/04 16:47:21</td>   <td>443</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WebPWASanityScript.tearDown()[pri:0, instance:com.zee5.PWASanityScripts.WebPWASanityScript@7180e701]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@176097974</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>21/02/19 18:13:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PWA_Web_Player.checkPageName()[pri:0, instance:com.zee5.MixpanelScripts.PWA_Web_Player@cad498c]">checkPageName</td> 
+  <td>main@1328718765</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>21/02/19 18:13:09</td>   <td>-13224</td> <td>&nbsp;</td><td title="&gt;&gt;PWA_Web_Player.init()[pri:0, instance:com.zee5.MixpanelScripts.PWA_Web_Player@cad498c]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1328718765</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>21/02/19 18:14:49</td>   <td>86924</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PWA_Web_Player.tearDown()[pri:0, instance:com.zee5.MixpanelScripts.PWA_Web_Player@cad498c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1328718765</td>   <td></td> </tr>
 </table>
