--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,15 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Web</th></tr>
-<tr><td><a href="#t0">WebPWAMixpanelScript</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">100,297</td><td></td><td></td></tr>
+<tr><td><a href="#t0">WebPWAMixpanelScript</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">76,651</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Web</th></tr></tbody><tbody id="t0"><tr><th colspan="4">WebPWAMixpanelScript &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">com.zee5.MixpanelScripts.PWA_Web_Player</td><td><a href="#m0">tearDown</a></td><td rowspan="1">1613738689838</td><td rowspan="1">1</td></tr><tr><th colspan="4">WebPWAMixpanelScript &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.zee5.MixpanelScripts.PWA_Web_Player</td><td><a href="#m1">checkPageName</a></td><td rowspan="1">1613738602914</td><td rowspan="1">86536</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Web</th></tr></tbody><tbody id="t0"><tr><th colspan="4">WebPWAMixpanelScript &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.zee5.MixpanelScripts.PWA_Web_Player</td><td><a href="#m0">checkPageName</a></td><td rowspan="1">1614080227897</td><td rowspan="1">61466</td></tr></tbody>
 </table>
-<h2>WebPWAMixpanelScript</h2><h3 id="m0">com.zee5.MixpanelScripts.PWA_Web_Player#tearDown</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at com.business.zee.Zee5PWAWEBMixPanelBusinessLogic.tearDown(Zee5PWAWEBMixPanelBusinessLogic.java:348)
-	at com.zee5.MixpanelScripts.PWA_Web_Player.tearDown(PWA_Web_Player.java:34)
-	at java.util.ArrayList.forEach(ArrayList.java:1249)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.zee5.MixpanelScripts.PWA_Web_Player#checkPageName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>WebPWAMixpanelScript</h2><h3 id="m0">com.zee5.MixpanelScripts.PWA_Web_Player#checkPageName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
